// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIPill /> renders the pill with the specified value prop 1`] = `
<div
  className="xui-pill xui-pill-maxwidth"
  data-automationid={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
    data-automationid={undefined}
  >
    <span
      className="xui-pill--text"
    >
      Value Pill
    </span>
  </span>
</div>
`;

exports[`<XUIPill /> should render a pills with correct size modifiers 1`] = `
<div
  className="xui-pill xui-pill-maxwidth xui-pill-is-deletable xui-pill-has-avatar"
  data-automationid={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
    data-automationid={undefined}
  >
    <abbr
      className="xui-pill--avatar xui-avatar xui-avatar-small xui-avatar-color-8"
      data-automationid={undefined}
      role="presentation"
    >
      TR
    </abbr>
    <span
      className="xui-pill--text"
    >
      Test
    </span>
  </span>
  <button
    aria-label="Delete"
    className="xui-button xui-pill--button-icon xui-button-icon"
    data-automationid={undefined}
    disabled={false}
    onClick={[Function]}
    onKeyDown={undefined}
    tabIndex={0}
    title="Delete"
    type="button"
  >
    <svg
      className="xui-icon"
      data-automationid={undefined}
      focusable="false"
      height={7}
      viewBox="0 0 7 7"
      width={7}
    >
      <path
        d="M4.25 3.5L7 6.25 6.25 7 3.5 4.25.75 7 0 6.25 2.75 3.5 0 .75.75 0 3.5 2.75 6.25 0 7 .75 4.25 3.5z"
        role="presentation"
      />
    </svg>
  </button>
</div>
`;

exports[`<XUIPill /> should render a pills with correct size modifiers 2`] = `
<div
  className="xui-pill xui-pill-maxwidth xui-pill-small xui-pill-is-deletable xui-pill-has-avatar"
  data-automationid={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
    data-automationid={undefined}
  >
    <abbr
      className="xui-pill--avatar xui-avatar xui-avatar-xsmall xui-avatar-color-8"
      data-automationid={undefined}
      role="presentation"
    >
      TR
    </abbr>
    <span
      className="xui-pill--text"
    >
      Test
    </span>
  </span>
  <button
    aria-label="Delete"
    className="xui-button xui-pill--button-icon xui-button-icon xui-button-icon-small"
    data-automationid={undefined}
    disabled={false}
    onClick={[Function]}
    onKeyDown={undefined}
    tabIndex={0}
    title="Delete"
    type="button"
  >
    <svg
      className="xui-icon"
      data-automationid={undefined}
      focusable="false"
      height={7}
      viewBox="0 0 7 7"
      width={7}
    >
      <path
        d="M4.25 3.5L7 6.25 6.25 7 3.5 4.25.75 7 0 6.25 2.75 3.5 0 .75.75 0 3.5 2.75 6.25 0 7 .75 4.25 3.5z"
        role="presentation"
      />
    </svg>
  </button>
</div>
`;

exports[`<XUIPill /> should render a pills with correct size modifiers 3`] = `
<div
  className="xui-pill xui-pill-maxwidth xui-pill-xsmall xui-pill-is-deletable xui-pill-has-avatar"
  data-automationid={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
    data-automationid={undefined}
  >
    <abbr
      className="xui-pill--avatar xui-avatar xui-avatar-2xsmall xui-avatar-color-8"
      data-automationid={undefined}
      role="presentation"
    >
      TR
    </abbr>
    <span
      className="xui-pill--text"
    >
      Test
    </span>
  </span>
  <button
    aria-label="Delete"
    className="xui-button xui-pill--button-icon xui-button-icon xui-button-icon-xsmall"
    data-automationid={undefined}
    disabled={false}
    onClick={[Function]}
    onKeyDown={undefined}
    tabIndex={0}
    title="Delete"
    type="button"
  >
    <svg
      className="xui-icon"
      data-automationid={undefined}
      focusable="false"
      height={7}
      viewBox="0 0 7 7"
      width={7}
    >
      <path
        d="M4.25 3.5L7 6.25 6.25 7 3.5 4.25.75 7 0 6.25 2.75 3.5 0 .75.75 0 3.5 2.75 6.25 0 7 .75 4.25 3.5z"
        role="presentation"
      />
    </svg>
  </button>
</div>
`;

exports[`<XUIPill /> should render a target when passed in 1`] = `
<div
  className="xui-pill xui-pill-maxwidth xui-pill-interactive"
  data-automationid={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <a
    aria-disabled={undefined}
    className="xui-button xui-pill--content xui-pill--button"
    data-automationid={undefined}
    disabled={false}
    href="http://xero.com"
    onClick={[Function]}
    onKeyDown={undefined}
    onKeyPress={[Function]}
    rel={undefined}
    role={undefined}
    tabIndex={0}
    target="_blank"
    title={undefined}
  />
</div>
`;

exports[`<XUIPill /> should render a title when passed 1`] = `
<div
  className="xui-pill xui-pill-maxwidth"
  data-automationid={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
    data-automationid={undefined}
  />
</div>
`;

exports[`<XUIPill /> should render an automation id when a qaHook is passed in 1`] = `
<div
  className="xui-pill xui-pill-maxwidth"
  data-automationid="pill-test"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
    data-automationid="pill-test--inner"
  />
</div>
`;

exports[`<XUIPill /> should render an error icon when invalid 1`] = `
<div
  className="xui-pill xui-pill-maxwidth xui-pill-is-invalid xui-pill-has-avatar"
  data-automationid={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
    data-automationid={undefined}
  >
    <div
      className="xui-pill--avatar xui-pill--erroricon xui-pill--erroricon-small"
    >
      <svg
        className="xui-icon xui-icon-color-red"
        data-automationid={undefined}
        focusable="false"
        height={8}
        viewBox="0 0 2 8"
        width={2}
      >
        <path
          d="M0,0 L2,0 L2,5 L0,5 L0,0 Z M0,6 L2,6 L2,8 L0,8 L0,6 Z"
          role="presentation"
        />
      </svg>
    </div>
    <span
      className="xui-pill--text"
    >
      Error pill
    </span>
  </span>
</div>
`;

exports[`<XUIPill /> should render an error icon when invalid even with an avatar 1`] = `
<div
  className="xui-pill xui-pill-maxwidth xui-pill-small xui-pill-is-invalid xui-pill-has-avatar"
  data-automationid={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
    data-automationid={undefined}
  >
    <div
      className="xui-pill--avatar xui-pill--erroricon xui-pill--erroricon-xsmall"
    >
      <svg
        className="xui-icon xui-icon-color-red"
        data-automationid={undefined}
        focusable="false"
        height={8}
        viewBox="0 0 2 8"
        width={2}
      >
        <path
          d="M0,0 L2,0 L2,5 L0,5 L0,0 Z M0,6 L2,6 L2,8 L0,8 L0,6 Z"
          role="presentation"
        />
      </svg>
    </div>
    <span
      className="xui-pill--text"
    >
      A
    </span>
  </span>
</div>
`;

exports[`<XUIPill /> should render inside a tooltip when using the debug flag 1`] = `
<span
  className="xui-tooltip xui-tooltip-tipopen"
>
  <div
    aria-describedby="tooltipDebugId"
    onBlur={[Function]}
    onClick={undefined}
    onFocus={[Function]}
    onKeyDown={undefined}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="xui-pill xui-pill-maxwidth"
      data-automationid={undefined}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="xui-pill--content"
        data-automationid={undefined}
      />
    </div>
  </div>
  <span
    className="xui-positioningInline"
    data-automationid={undefined}
    style={
      Object {
        "flexDirection": "column",
        "top": undefined,
      }
    }
  >
    <span
      aria-hidden={false}
      className="xui-tooltip--tip xui-tooltip--tip-open"
      data-automationid={undefined}
      id="tooltipDebugId"
      role="tooltip"
      style={
        Object {
          "marginLeft": null,
          "marginRight": -220,
          "maxHeight": null,
          "maxWidth": null,
          "width": null,
        }
      }
    />
  </span>
</span>
`;
